          they are surrounded by brackets, like in this example :

             if [ a equ b ] echo no, seriously ?

SUNDAY 10TH, MAY

        - Some fixes for windows, specially for the CTRL+C handling routines.

FRIDAY 24TH, APRIL

        - Fixed a few remaining bugs in the implementation of if extended 
          expression. As a example, in some case, an _or_ used to be computed 
          as an _and_. These issues are now fixed and the command great.

        - Merged tests of the _If_ command. In fact, some test were duplicated 
          in different sources, but for maintenability reason, it try to give 
          up with the copy and past approach.

        - Corrected an issue of the _TEA_ text processor. When poducing html 
          output, _TEA_ often failed to recognize path that refer to actual 
          other _TEA_ based pages and others files. One of the typical issue 
          was that TEA sometimes appended ".html" to URIs (that already 
          contained an ".html" anyway). Now, _TEA_ also check for protocol 
          prefixes in order to chose wether a ".html" suffix should be 
          appended. Recognised protocols are :

             - _http://_

             - _https://_

             - _mail://_

THURSDAY 7TH, MAY

        - Fixed lots of man pages for the Dos9 project. Also fixed some little 
          bugs in the TEA text processor, dealing with some sort of _\_ that 
          where mishandled in previous patches.

        - Changed regexp implementation after discovery of some bugs (eg 
          "test" was not matching "*e*s*"). The new implementation is less 
          faulty and clearer to use.

        - Added a new _/e_ switch to the _FIND_ command (to produce somewhat 
          similar to UNIX's well known _grep -e_ command). It enables use of 
          joker expressions on patterns. With this option _FIND_ checks that 
          the entire line matches the expression.
