@@ -4,7 +4,7 @@
 
 {{Synopsis}}
 
-	${MORE [/E] [/C] [/P] [/T[:]n] [/S] [+n] [fichier ...]}
+	${MORE [/E] [/C] [/P] [/T[:]n] [/S] [/A] [/U] [+n] [fichier ...]}
 
 	Affiche le contenu d'un fichier page par page, et attend une action
 	de l'utilisateur à chaque nouvelle page affichée.
@@ -32,6 +32,13 @@
 
 	- {+n} : commence l'affichage du ficher à la ligne {n}.
 
+	- {/A} : N'ignore pas les codes CSI (aussi appelés ANSI codes). Ils
+	seront donc comptés commes des caractères affichés.
+	
+	- {/U} : Considère que l'encodage utilisé est un encodage autre que
+	utf-8. L'encodage est alors considéré comme un encodage de largeur
+	fixe et d'un octet.
+	
 	- {fichier ...} : Une liste de fichiers. Si des noms de fichiers
 	(contenant éventuellement des {spec/regexp|expressions régulières})
 	sont donnés mais ne correspondent à aucun fichier, alors la commande
